--- a/server/static/css/main.css
+++ b/server/static/css/main.css
@@ -2,13 +2,14 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    color: black;
+    color: white;
+
 }
 
 html {
     font-family: 'Roboto', sans-serif;
     text-rendering: optimizeLegibility;
-    background-color: #2c2c2c;
+    background-color: #000000;
     text-align: justify;
 }
 
@@ -18,11 +19,12 @@ h1 {
 }
 
 body {
-    margin-top: 1em;    
+    margin-top: 1em;
 }
 
 .container {
-    background-color: #FFFFFF;
+    background-color: transparent;
+    z-index: 5;
 }
 
 #header {
@@ -37,17 +39,28 @@ body {
     top: 0;
     right: 0;
     border: 0;
-    z-index: 100;    
+    z-index: 100;
 }
 
 .content-title {
     border: 5px;
     border-style: solid;
+    color: white;
 }
 
 .content-title h1 {
     padding: 0.5em;
     margin-bottom: 0;
+    color: white;
+}
+.subtitle strong {
+  color: white;
+}
+.subtitle {
+  color: white;
+}
+.content {
+  color: white;
 }
 
 #canvas {
@@ -59,3 +72,24 @@ body.transform {
   -ms-transform:rotate(180deg);
   -webkit-transform:rotate(180deg);
 }
+
+/* BACKGROUND */
+
+#bg {
+	position: static;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: -1;
+}
+
+#bg canvas {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+  z-index: -1;
+}
+/* END BACKGROUND */
